[project]
name = "greenhouse-contractor-caller"
version = "0.1.0"
description = "Outbound realtime voice caller for sourcing a greenhouse assembly contractor."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "stripe>=10.0.0",
  "twilio>=9.2.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
